Contenido Noticia, Titulo y Navegacion entre ambas paginas

--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
 </head>
 <body>
     <header>
-        <a href="index.html">HOME</a>
-        <a href="noticia.html">NOTICIA</a>
+        <h1>The Onion</h1>
     </header>
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="noticia.html">Noticia</a></li>
-        </ul>
+        <h3><a href="index.html">HOME</h3><h3><a href="noticia.html">NOTICIA</h3></a>
     </nav>
     <section>
         <h1>NOTICIAS RECIENTES</h1>
