--- a/clase4/noticia.html
+++ b/clase4/noticia.html
@@ -113,40 +113,38 @@
                     crazy.”
                 </p>
             </article>
-            <section>
+            <div class="NextNewsPage">
+                <div class="NextNewsLeft">
                 <strong>Florida Gators Climb Ladder With Scissors To Circumcise Dick Vitale</strong>
-                <label>Continued on Next Page</label>
-            </section>
-            <section>
-                <div>
-                    <p>Hola, soy Goku! Necesito tu ayuda para derrotar a Freezer.</p>
-                    <img src="https://cdn.memegenerator.es/imagenes/memes/full/33/38/33381195.jpg" alt="Goku"
-                        height="300px" width="300px">
-                    <p>Por favor, necesito:</p>
-                    <form>
-                        <fieldset name="Informacion Confidencial">
-                            <p>Los 16 numeros de la tarjeta de credito de tus padres</p>
-                            <input type="text" name="Tarjeta" placeholder="Ingrese aqui">
-                            <p>La fecha de vencimiento de la misma</p>
-                            <input type="date" name="Vencimiento" placeholder="FechaVto">
-                            <p>El codigo de 3 digitos de la parte trasera</p>
-                            <input type="text" name="CodigoSeguridad" placeholder="Codigo">
-                            <p>La direccion completa de tu casa</p>
-                            <input type="text" name="Direccion" placeholder="Direccion">
-                            <p>Un horario en que tus padres no esten</p>
-                            <input type="time" name="Horario" placeholder="Horario">
-                            <p>Factor de Sangre y Cantidad de Riñones</p>
-                            <input type="text" name="Sangre" placeholder="FactorSangre">
-                            <button type="submit" formaction="https://theonion.com/home"
-                                formmethod="post">Enviar</button>
-                            <p>Recuerda que si no me ayudas, Freezer matara a todos tus amigos y a tu familia.</p>
-                        </fieldset>
-                    </form>
                 </div>
-            </section>
+                <div class="NextNewsRight">
+                    <a>Continued on Next Page</a>
+                </div>
+            </div>
         </div>
-        <div class="ReadMore">
-
+        <div class="Form">
+            <p>Hola, soy Goku! Necesito tu ayuda para derrotar a Freezer.</p>
+            <img src="https://cdn.memegenerator.es/imagenes/memes/full/33/38/33381195.jpg" alt="Goku" height="300px"
+                width="300px">
+            <p>Por favor, necesito:</p>
+            <form>
+                <fieldset name="Informacion Confidencial">
+                    <p>Los 16 numeros de la tarjeta de credito de tus padres</p>
+                    <input type="text" name="Tarjeta" placeholder="Ingrese aqui">
+                    <p>La fecha de vencimiento de la misma</p>
+                    <input type="date" name="Vencimiento" placeholder="FechaVto">
+                    <p>El codigo de 3 digitos de la parte trasera</p>
+                    <input type="text" name="CodigoSeguridad" placeholder="Codigo">
+                    <p>La direccion completa de tu casa</p>
+                    <input type="text" name="Direccion" placeholder="Direccion">
+                    <p>Un horario en que tus padres no esten</p>
+                    <input type="time" name="Horario" placeholder="Horario">
+                    <p>Factor de Sangre y Cantidad de Riñones</p>
+                    <input type="text" name="Sangre" placeholder="FactorSangre">
+                    <button type="submit" formaction="https://theonion.com/home" formmethod="post">Enviar</button>
+                    <p>Recuerda que si no me ayudas, Freezer matara a todos tus amigos y a tu familia.</p>
+                </fieldset>
+            </form>
         </div>
     </div>
     <div class="Footer">
