Retoques del Layout, Flexbox e implementacion de Hamburger Menu en Mobile

--- a/clase6/noticia.html
+++ b/clase6/noticia.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Man Who Bumped Tesla While Parallel Parking Sentenced To Death - The Onion</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -31,7 +32,8 @@
                 <strong>Monday, June 2, 2025</strong> ☀️ 71°
             </div>
             <div class="HeaderBox HeaderBottomMid">
-                <nav>
+                <div class="HamburgerMenu">&#9776;</div>
+                <nav id="MainNav">
                     <label><b>News</b></label>
                     <label><b>Local</b></label>
                     <label><b>Politics</b></label>
@@ -55,17 +57,6 @@
         </div>
     </div>
     <div class="MainBody">
-        <div class="LeftNavigation">
-            <a>Share</a>
-            <ul>
-                <li><a href="#">🔗</a></li>
-                <li><a href="#">📘</a></li>
-                <li><a href="#">🐦</a></li>
-                <li><a href="#">💼</a></li>
-                <li><a href="#">💬</a></li>
-                <li><a href="#">✉</a></li>
-            </ul>
-        </div>
         <div class="MainContent">
             <article>
                 <a>News</a>
@@ -113,13 +104,26 @@
                 </div>
             </div>
         </div>
-        <div class="RightNavigation">
-            <a class="AdSectionTitle">Advertising</a>
-            <div class="NewsBox">
-
+        <div class="SideColumn">
+            <div class="LeftNavigation">
+                <a>Share</a>
+                <ul>
+                    <li><a href="#">🔗</a></li>
+                    <li><a href="#">📘</a></li>
+                    <li><a href="#">🐦</a></li>
+                    <li><a href="#">💼</a></li>
+                    <li><a href="#">💬</a></li>
+                    <li><a href="#">✉</a></li>
+                </ul>
             </div>
-            <div class="NewsBox">
+            <div class="RightNavigation">
+                <a class="AdSectionTitle">Advertising</a>
+                <div class="NewsBox">
 
+                </div>
+                <div class="NewsBox">
+
+                </div>
             </div>
         </div>
         <div class="Form">
